--- a/index.html
+++ b/index.html
@@ -83,8 +83,13 @@
       }
 
       body {
+        display: flex;
+        flex-direction: column;
         font-family: Roboto, sans-serif;
         margin: 0;
+        max-width: 100vw;
+        min-height: 100vh;
+        overflow-x: hidden;
         padding: 1.25rem;
       }
 
@@ -104,6 +109,53 @@
         max-width: 40rem;
       }
 
+      footer {
+        display: flex;
+        flex-direction: column;
+        gap: 1.25rem;
+        margin-block: auto 0;
+        padding-block-start: 5rem;
+      }
+
+      footer > div {
+        align-items: center;
+        display: flex;
+        justify-content: center;
+      }
+
+      footer > div:first-child {
+        display: flex;
+        font-size: 1.5rem;
+        gap: 1.25rem;
+      }
+
+      footer > div:last-child {
+        align-items: center;
+        display: flex;
+        gap: 0 0.25rem;
+        flex-wrap: wrap-reverse;
+        justify-content: center;
+        text-align: center;
+      }
+
+      h1,
+      h2,
+      h3,
+      p {
+        margin: 0;
+      }
+
+      h1,
+      h2 {
+        letter-spacing: 1px;
+        text-wrap: balance;
+      }
+
+      h2,
+      h3 {
+        font-weight: inherit;
+      }
+
       h1 {
         font-size: clamp(1.5rem, 6.25vmin, 2rem);
       }
@@ -120,6 +172,28 @@
       ul {
         list-style: none;
         padding: 0;
+      }
+
+      a,
+      button {
+        align-items: center;
+        color: var(--blue);
+        display: inline-flex;
+        justify-content: center;
+        min-height: 2rem;
+        min-width: 2rem;
+      }
+
+      button {
+        border: none;
+        background: inherit;
+        cursor: pointer;
+        font-size: inherit;
+        padding: 0;
+      }
+
+      .instructions h3 {
+        margin-block: 1.25rem 0.5rem;
       }
 
       @media not all and (min-width: 400px) {
@@ -175,7 +249,18 @@
         </section>
       </div>
     </main>
-    <footer></footer>
+    <footer>
+      <div>
+        <p>
+          &copy;
+          <a href="https://maxmonis.com" rel="noopener" target="_blank"
+            >Max Monis</a
+          >
+          2025. All Rights Reserved.
+        </p>
+        <p>Proudly Canadian 🍁</p>
+      </div>
+    </footer>
     <script src="/app/main.ts" type="module"></script>
     <noscript>You need to enable JavaScript to run this app.</noscript>
   </body>
