Add fade in animation, prevent console error

--- a/index.html
+++ b/index.html
@@ -99,6 +99,20 @@
         max-width: 40rem;
         padding-inline: 1.25rem;
       }
+      main * {
+        animation: fadeIn 300ms forwards;
+      }
+      @keyframes fadeIn {
+        0% {
+          opacity: 0;
+        }
+        25% {
+          opacity: 0;
+        }
+        100% {
+          opacity: 1;
+        }
+      }
       footer {
         display: flex;
         flex-direction: column;
