Minor UI updates

--- a/index.html
+++ b/index.html
@@ -159,6 +159,9 @@
       p {
         text-wrap: pretty;
       }
+      .instructions {
+        margin-block-start: 5rem;
+      }
       @media not all and (min-width: 400px) {
         html {
           font-size: 14px;
