Minor cleanup/refactor

--- a/index.html
+++ b/index.html
@@ -132,23 +132,17 @@
       }
       h1,
       h2,
-      h3,
-      p {
-        margin: 0;
-      }
-      h1,
-      h2,
       h3 {
         letter-spacing: 1px;
         text-wrap: balance;
       }
       h1 {
         font-size: clamp(1.5rem, 6.25vmin, 2rem);
-        margin-block-end: 1.25rem;
+        margin: 0 0 1.25rem;
       }
       h2,
       h3 {
-        margin-block: 1.25rem 0.5rem;
+        margin: 1.25rem 0 0.5rem;
       }
       h2 {
         font-size: clamp(1.375rem, 5vmin, 1.75rem);
@@ -157,6 +151,7 @@
         font-size: clamp(1.25rem, 4vmin, 1.5rem);
       }
       p {
+        margin: 0;
         text-wrap: pretty;
       }
       .instructions {
