--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
         --fg: var(--dark);
         --gray: #374151;
         --light: #fefefe;
+        --red: #b91c1c;
         --slate: #334155;
       }
       :root:has(body.dark) {
@@ -64,6 +65,7 @@
         --blue: #60a5fa;
         --fg: var(--light);
         --gray: #d1d5db;
+        --red: #ef4444;
         --slate: #cbd5e1;
       }
       * {
@@ -179,16 +181,16 @@
         <section>
           <h3>Gameplay</h3>
           <p>
-            The host starts the game by naming a movie or actor. The next player
-            then names an actor from the movie or a movie starring the actor.
-            Play continues this way until a player is stumped, at which point
-            they can challenge. The previous player then has to name another
-            actor from the previous movie or another movie starring the previous
-            actor. If they succeed, the challenging player receives a letter,
-            and if not, the challenged player receives a letter. Players are
-            eliminated once they've spelled out the word BOMB, and the game ends
-            when all players but one have been eliminated. That player is the
-            winner!
+            The host starts the game by naming a movie. The next player then
+            names an actor from the movie. The following player then names
+            another movie starring that actor. Play continues this way until a
+            player is stumped, at which point they can challenge. The previous
+            player then has to name another actor from the previous movie or
+            another movie starring the previous actor. If they succeed, the
+            challenging player receives a letter, and if not, the challenged
+            player receives a letter. Players are eliminated once they've
+            spelled out the word BOMB, and the game ends when all players but
+            one have been eliminated. That player is the winner!
           </p>
         </section>
         <section>
