--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@
         font-size: clamp(1.25rem, 4vmin, 1.5rem);
       }
       p {
+        line-height: 1.5;
         margin: 0;
         text-wrap: pretty;
       }
