Prevent answer reuse, add search link to verify previous move

--- a/index.html
+++ b/index.html
@@ -182,16 +182,24 @@
         <section>
           <h3>Gameplay</h3>
           <p>
-            The host starts the game by naming a movie. The next player then
-            names an actor from the movie. The following player then names
+            The first player starts the game by naming a movie. The next player
+            then names an actor from the movie. The following player then names
             another movie starring that actor. Play continues this way until a
             player is stumped, at which point they can challenge. The previous
             player then has to name another actor from the previous movie or
             another movie starring the previous actor. If they succeed, the
             challenging player receives a letter, and if not, the challenged
-            player receives a letter. Players are eliminated once they've
-            spelled out the word BOMB, and the game ends when all players but
-            one have been eliminated. That player is the winner!
+            player receives a letter. A new round then begins. Players are
+            eliminated once they've spelled out the word BOMB, and the game ends
+            when all players but one have been eliminated. That player is the
+            winner!
+          </p>
+          <p>
+            Actors and movies cannot be reused throughout the entire game. If a
+            player provides an incorrect response, the next player has the
+            option of marking that response as incorrect, at which time the
+            player who named the incorrect movie or actor will immediately
+            receive a letter and a new round will begin.
           </p>
         </section>
         <section>
