--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
       }
       h2,
       h3 {
-        margin: 1.25rem 0 0.5rem;
+        margin: 0.75rem 0 0.5rem;
       }
       h2 {
         font-size: clamp(1.375rem, 5vmin, 1.75rem);
@@ -145,6 +145,9 @@
       }
       .instructions {
         margin-block-start: 5rem;
+      }
+      .instructions p {
+        margin-block-start: 0.5rem;
       }
       @media not all and (min-width: 400px) {
         html {
