Minor UI update

--- a/index.html
+++ b/index.html
@@ -197,14 +197,10 @@
             You can create a game by entering your name. As the game creator,
             you will then be able to approve or reject join requests from other
             players, and also determine when to start your game. Once a game has
-            started, no one else can join. Players can be removed by the host
-            and will automatically be booted for inactivity.
-          </p>
-          <p>
-            To request to join another game, simply click its "Request to Join"
-            button and enter your name. You can optionally also add a message to
-            the creator. The creator will then admit or reject you. You can play
-            one game at a time.
+            started, no one else can join. To request to join an existing game,
+            simply click its "Request to Join" button and enter your name. You
+            can optionally also add a message to the creator. The creator will
+            then admit or reject you. You can play one game at a time.
           </p>
         </section>
       </div>
