--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
     <meta content="no-cache" http-equiv="Pragma" />
     <meta content="0" http-equiv="Expires" />
     <meta
-      content="Online multiplayer movie and actor game"
+      content="Online multiplayer movie and actor game. Players take turns naming movies and actors until someone is stumped. Last player standing wins!"
       name="description"
     />
     <meta content="BOMB" property="og:title" translate="no" />
     <meta
-      content="Online multiplayer movie and actor game"
+      content="Online multiplayer movie and actor game. Players take turns naming movies and actors until someone is stumped. Last player standing wins!"
       property="og:description"
     />
     <meta content="summary_large_image" name="twitter:card" />
     <meta content="BOMB" name="twitter:title" translate="no" />
     <meta
-      content="Online multiplayer movie and actor game"
+      content="Online multiplayer movie and actor game. Players take turns naming movies and actors until someone is stumped. Last player standing wins!"
       name="twitter:description"
     />
     <link href="/favicon.ico" rel="icon" type="image/x-icon" />
