Use my new htm-elements npm package

--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@
         --light: #fefefe;
         --red: #b91c1c;
         --slate: #334155;
+
+        --htm-border: var(--slate);
+        --htm-toast-bg: var(--fg);
+        --htm-toast-fg: var(--bg);
       }
       :root:has(body.dark) {
         --bg: var(--dark);
